mejorando el login

--- a/login.html
+++ b/login.html
@@ -25,25 +25,27 @@
         </div>
 
     </header>
-
-    <div>
-        <a href="./index.html"></a>
-    </div>
+<main>
+    <div class="login2">
+        <h2>Iniciar sesion</h2>
     <form class="register" action="index.html" method="get">
-        <div>
-            <label for="email"></label>
-            <input id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+        <div class="login3">
+            <label for="email">Email:</label>
+            <input class="login4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
         </div>
-        <div>
-            <label for="contraseña"></label>
-            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+        <div class="login3">
+            <label for="contraseña">Contraseña:</label>
+            <input class="login4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
         </div>
-        <div>
+        <div class="login3">
             <button type="submit">Ingresar</button>
         </div>
+        <div class="login3">
         <a href="./register.html">No tengo una cuenta</a>
+        </div>
     </form>
-    
+    </div>
+</main>    
         <footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
