--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
         <div  class="register3">
             <label for="email">Email:</label>
             <br>
-            <input class="register4" class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+            <input class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
         </div>
         <div class="register3">
             <label for="contraseña">Contraseña:</label>
@@ -56,7 +56,7 @@
         </div>
     </form>
     </div>
-    </main>
+</main>
         <footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
