--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                         <img class="fotoP" src="./img/imagen.jpg" alt="">
                         <h3>Huevo Goloriolo</h3>
                         <p>$ 9300</p>
-                        <p>- Hechos de calidad y con amor</p>
+                        <p>- hechos de calidad y con amor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                     
                 </article>
@@ -67,7 +67,7 @@
                         <img class="fotoP" src="./img/pascuas-6.jpg" alt="">
                         <h3>Huevo Kinder</h3>
                         <p>$ 14900</p>
-                        <p>- una sorpresa para los niños</p>
+                        <p>- una sorpresa para los niños.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -75,9 +75,9 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/128142-01_arcor-chocolate-butter-toffee-chewy-candy-1lb-bag.jpg"
                             alt="">
-                        <h3>Caramelos de Dulce de Leche</h3>
+                        <h3>Caramelos Butter Toffees</h3>
                         <p>$ 400 / 100g</p>
-                        <p>- los clasicos, de dulce de leche</p>
+                        <p>- los clasicos, de dulce de leche.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -86,7 +86,7 @@
                         <img class="fotoP" src="./img/3724.jpg" alt="">
                         <h3>Alfajor Rasta</h3>
                         <p>$ 3000</p>
-                        <p>- tapa dura y bien bajoneros</p>
+                        <p>- tapa dura y bien bajoneros.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -95,7 +95,7 @@
                         <img class="fotoP" src="./img/marroc.jpeg" alt="">
                         <h3>Bocadito Marroc</h3>
                         <p>$ 2300</p>
-                        <p>- el bocadito clasico</p>
+                        <p>- el bocadito clasico.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
             
@@ -105,7 +105,7 @@
                         <img class="fotoP" src="./img/bon o bon bla.jpeg" alt="">
                         <h3>Bon o Bon Negro</h3>
                         <p>$ 1800</p>
-                        <p>- el mejor regalo</p>
+                        <p>- el mejor regalo.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -114,7 +114,7 @@
                         <img class="fotoP" src="./img/bon o bon neg.jpeg" alt="">
                         <h3>Bon o Bon Negro</h3>
                         <p>$ 1800</p>
-                        <p>- el mejor regalo</p>
+                        <p>- el mejor regalo.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                  </article>
 
@@ -123,7 +123,7 @@
                         <img class="fotoP" src="./img/kinder bueno bla.jpg" alt="">
                         <h3>Kinder Bueno Blanco</h3>
                         <p>$ 4100</p>
-                        <p>- 2 obleas rellenas de sabor</p>
+                        <p>- 2 obleas rellenas de sabor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -132,7 +132,7 @@
                         <img class="fotoP" src="./img/kinder bueno neg.png" alt="">
                         <h3>Kinder Bueno Negro</h3>
                         <p>$ 4100</p>
-                        <p>- 2 obleas rellenas de sabor</p>
+                        <p>- 2 obleas rellenas de sabor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -141,7 +141,7 @@
                         <img class="fotoP" src="./img/milka oreo.jpeg" alt="">
                         <h3>Milka Oreo</h3>
                         <p>$ 23000</p>
-                        <p>- la combinacion perfecta</p>
+                        <p>- la combinacion perfecta.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
         <div>
@@ -167,7 +167,7 @@
                         <img class="fotoP" src="./img/hamlet.webp" alt="">
                         <h3>Chocolate Hamlet</h3>
                         <p>$ 1129</p>
-                        <p>- Barra de chocolate relleno de dulce de leche</p>
+                        <p>- barra de chocolate relleno de dulce de leche.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -176,7 +176,7 @@
                         <img class="fotoP" src="./img/kitkat.webp" alt="">
                         <h3>Chocolate Kit Kat</h3>
                         <p>$ 2199</p>
-                        <p>- chocolate que consiste en capas de galleta crujiente cubiertas de chocolate, famosa por su textura y sabor irresistibles.</p>
+                        <p>- galletita crujiente cubierta de chocolate, famosa por su textura.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -185,7 +185,7 @@
                         <img class="fotoP" src="./img/palitodelaselva.webp" alt="">
                         <h3>Palitos de la selva</h3>
                         <p>$ 7000</p>
-                        <p>- Bolsa de palito de la selva</p>
+                        <p>- bolsa de palito de la selva.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -202,7 +202,7 @@
                         <img class="fotoP" src="./img/Reeses.webp" alt="">
                         <h3>Chocolate Reeses</h3>
                         <p>$ 2499</p>
-                        <p>- chocolates que combinan mantequilla de maní cremoso y una capa de chocolate con leche,</p>
+                        <p>- chocolate con leche y mantequilla de maní.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -211,7 +211,7 @@
                         <img class="fotoP" src="./img/rodesia.png" alt="">
                         <h3>Rhodesia</h3>
                         <p>$ 1600</p>
-                        <p>chocolate con una mezcla de malta y crema</p>
+                        <p>- chocolate con una mezcla de malta y crema.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -220,7 +220,7 @@
                         <img class="fotoP" src="./img/shot.png" alt="">
                         <h3>Chocolate Shot</h3>
                         <p>$ 3000</p>
-                        <p>- chocolate con mantequilla de mani</p>
+                        <p>- chocolate con mantequilla de mani.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -229,7 +229,7 @@
                         <img class="fotoP" src="./img/Sugus.jpg" alt="">
                         <h3>Bolsa Sugus</h3>
                         <p>$ 7600</p>
-                        <p>- Bolsa de caramelo Sugus</p>
+                        <p>- bolsa de caramelo Sugus.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -238,7 +238,7 @@
                         <img class="fotoP" src="./img/tita.webp" alt="">
                         <h3>Chocolate Tita</h3>
                         <p>$ 1699</p>
-                        <p>galletita bañada en chocolate</p>
+                        <p>- galletita bañada en chocolate.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>    
 
