--- a/productos.html
+++ b/productos.html
@@ -55,6 +55,11 @@
                     ¡ideales para regalar!
                 </h3>
                 <h3 class="huevo5">$10.000</h3>
+                <div class="huevo7">
+                <h3 class="huevo8">Categoria: Chocolates</h3>
+                <h3 class="huevo8">Stock: 04</h3>             
+                <h3 class="huevo8">#023</h3>
+                </div>
             </div>
             <div class="reviews">
             <div class="review">
