--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/imagen.jpg" alt="">
                         <h3>Huevo Goloriolo</h3>
-                        <p>$ 9300</p>
+                        <p>$ 9.300</p>
                         <p>- hechos de calidad y con amor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                     
@@ -66,7 +66,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/pascuas-6.jpg" alt="">
                         <h3>Huevo Kinder</h3>
-                        <p>$ 14900</p>
+                        <p>$ 14.900</p>
                         <p>- una sorpresa para los niños.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -85,7 +85,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/3724.jpg" alt="">
                         <h3>Alfajor Rasta</h3>
-                        <p>$ 3000</p>
+                        <p>$ 3.000</p>
                         <p>- tapa dura y bien bajoneros.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -94,8 +94,8 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/marroc.jpeg" alt="">
                         <h3>Bocadito Marroc</h3>
-                        <p>$ 2300</p>
-                        <p>- el bocadito clasico.</p>
+                        <p>$ 2.300</p>
+                        <p>- Cuadraditos de chocolate blanco, mani y de leche.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
             
@@ -104,7 +104,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/bon o bon bla.jpeg" alt="">
                         <h3>Bon o Bon Negro</h3>
-                        <p>$ 1800</p>
+                        <p>$ 1.800</p>
                         <p>- el mejor regalo.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -113,7 +113,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/bon o bon neg.jpeg" alt="">
                         <h3>Bon o Bon Negro</h3>
-                        <p>$ 1800</p>
+                        <p>$ 1.800</p>
                         <p>- el mejor regalo.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                  </article>
@@ -122,7 +122,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/kinder bueno bla.jpg" alt="">
                         <h3>Kinder Bueno Blanco</h3>
-                        <p>$ 4100</p>
+                        <p>$ 4.100</p>
                         <p>- 2 obleas rellenas de sabor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -131,7 +131,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/kinder bueno neg.png" alt="">
                         <h3>Kinder Bueno Negro</h3>
-                        <p>$ 4100</p>
+                        <p>$ 4.100</p>
                         <p>- 2 obleas rellenas de sabor.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -140,7 +140,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/milka oreo.jpeg" alt="">
                         <h3>Milka Oreo</h3>
-                        <p>$ 23000</p>
+                        <p>$ 8.000</p>
                         <p>- la combinacion perfecta.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -157,7 +157,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/alfajor-oreo.jpg.webp" alt="">
                         <h3>Alfajor Oreo</h3>
-                        <p>$ 1880</p>
+                        <p>$ 1.880</p>
                         <p>- dulce de galletas de chocolate con relleno cremoso de vainilla.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -166,7 +166,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/hamlet.webp" alt="">
                         <h3>Chocolate Hamlet</h3>
-                        <p>$ 1129</p>
+                        <p>$ 1.129</p>
                         <p>- barra de chocolate relleno de dulce de leche.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -175,7 +175,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/kitkat.webp" alt="">
                         <h3>Chocolate Kit Kat</h3>
-                        <p>$ 2199</p>
+                        <p>$ 2.199</p>
                         <p>- galletita crujiente cubierta de chocolate, famosa por su textura.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -184,8 +184,8 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/palitodelaselva.webp" alt="">
                         <h3>Palitos de la selva</h3>
-                        <p>$ 7000</p>
-                        <p>- bolsa de palito de la selva.</p>
+                        <p>$ 7.000</p>
+                        <p>- bolsa de palitos de la selva.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -193,7 +193,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/picodulce.webp" alt="">
                         <h3>Pico Dulce</h3>
-                        <p>$ 7499</p>
+                        <p>$ 7.499</p>
                         <p>- Bolsa de pico dulce</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -201,7 +201,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/Reeses.webp" alt="">
                         <h3>Chocolate Reeses</h3>
-                        <p>$ 2499</p>
+                        <p>$ 2.499</p>
                         <p>- chocolate con leche y mantequilla de maní.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -210,7 +210,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/rodesia.png" alt="">
                         <h3>Rhodesia</h3>
-                        <p>$ 1600</p>
+                        <p>$ 1.600</p>
                         <p>- chocolate con una mezcla de malta y crema.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -219,7 +219,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/shot.png" alt="">
                         <h3>Chocolate Shot</h3>
-                        <p>$ 3000</p>
+                        <p>$ 3.000</p>
                         <p>- chocolate con mantequilla de mani.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -228,7 +228,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/Sugus.jpg" alt="">
                         <h3>Bolsa Sugus</h3>
-                        <p>$ 7600</p>
+                        <p>$ 7.600</p>
                         <p>- bolsa de caramelo Sugus.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
@@ -237,7 +237,7 @@
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/tita.webp" alt="">
                         <h3>Chocolate Tita</h3>
-                        <p>$ 1699</p>
+                        <p>$ 1.699</p>
                         <p>- galletita bañada en chocolate.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>    
