--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="./home.html">
+        <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
         <article class="buscador">
