--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <body>
     <header>
-        <a href="./home.html">
+        <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
-        <article class="buscador">
+        <div class="buscador">
 
             <form action="./search.html">
                 <input type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
             </form>
 
-        </article>
+        </div>
         <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
@@ -40,7 +40,7 @@
                         <li>Navidad</li>
                         <li>Pascuas</li>
                         <li>Caramelos</li>
-                        <li class="gomitas">Gomitas</li>
+                        <li>Gomitas</li>
                     </a>
                 </ul>
             </nav>
