--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <header>
-        <a href="./home.html">
+        <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt=""class="logo">
         </a>
          <article class="buscador">
