corrigimos las cagadas de andy

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         <div>
             <div class="pAleatorios">
-                    <h2>TOP MAS VENDIDOS</h2>
-                
+                    <h1>TOP MAS VENDIDOS</h1>
+            </div>    
             <section class="productostop">
                 <article class="productostop1">
                     <a href="./productos.html"></a>
