--- a/productos.html
+++ b/productos.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <script src="./js/productos.js"></script>
+
     <header>
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
