--- a/category.html
+++ b/category.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <script src="./js/category.js"></script>
+
         <header>
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt=""class="logo">
