--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     
-    <script src="./js/index.js"></script>
+   
     <header>
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
         <div class="buscador">
 
-            <form action="./search.html">
-                <input type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html">
+                <input id="barra" type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
             </form>
 
@@ -160,6 +160,7 @@
             <li>Lucas Daud</li>
         </ul>
     </footer>
+     <script src="./js/index.js"></script>
 </body>
 
 </html>
