--- a/login.html
+++ b/login.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+        <script src="./js/login.js"></script>
         <header>
         <a href="./index.html">
         <img src="./img/logo goloriolo.png" alt=""class="logo">
         </a>
         <article class="buscador">
         
-            <form action="./search.html">
-            <input type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html">
+            <input id="barra" type="text" placeholder="Buscar...">
             <button>Buscar 🔍</button>
         </form>  
       
@@ -53,5 +54,6 @@
     <li>Lucas Daud</li>
 </ul>
     </footer>
+    <script src="./js/login.js"></script>
 </body>
 </html>
