--- a/productos.html
+++ b/productos.html
@@ -14,8 +14,8 @@
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
         <article class="buscador">
-            <form action="./search.html">
-                <input type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html">
+                <input id="barra" type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
         </article>
         <div class="login">
@@ -91,6 +91,7 @@
             <li>Lucas Daud</li>
         </ul>
     </footer>
+    <script src="./js/productos.js"></script>
 </body>
 
 </html>
