--- a/register.html
+++ b/register.html
@@ -13,8 +13,8 @@
         </a>
          <article class="buscador">
         
-            <form action="./search.html">
-            <input type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html">
+            <input id="barra" type="text" placeholder="Buscar...">
             <button>Buscar 🔍</button>
         </form>  
       
