--- a/category.html
+++ b/category.html
@@ -13,8 +13,8 @@
         </a>
          <article class="buscador">
         
-            <form action="./search.html">
-            <input type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html">
+            <input id="barra" type="text" placeholder="Buscar...">
             <button>Buscar 🔍</button>
         </form>  
       
@@ -144,5 +144,6 @@
     <li>Lucas Daud</li>
 </ul>
     </footer>
+    <script src="./js/category.js"></script>
 </body>
 </html>
