register bien echo

--- a/register.html
+++ b/register.html
@@ -25,6 +25,10 @@
         </div>
 
     </header>
+
+
+
+
 <main>
     <div class="register2">
         <h2>Registrarse</h2>
@@ -32,32 +36,36 @@
         <div  class="register3">
             <label for="email">Email:</label>
             <br>
-            <input class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+            <input class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="">
         </div>
         <div class="register3">
             <label for="contraseña">Contraseña:</label>
             <br>
-            <input class="register4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+            <input class="register3" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="">
         </div>
-         <div class="register3">
+         <div class="register4">
             <label for="contraseña">Vuelva a introducir su contraseña:</label>
             <br>
-            <input class="register4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña nuevamente" value="" required>
+            <input class="register4" id="contraseña1" type="password" name="contraseña" placeholder="ingrese su contraseña nuevamente" value="">
         </div>
-        <div class="register3">
+        <div class="register5">
             <button type="submit">Registrarse</button>
         </div>
         <div class="register3">
         <a href="./login.html">Ya tengo una cuenta</a>
         </div>
-        <div class="register3">
-            <input type="checkbox" name="Terminos" value="" required="Acepto terminos y Condiciones">
+        <div class="register6">
+            <input id="terminos" type="checkbox" name="Terminos" value="" required="Acepto terminos y Condiciones">
             <label for="terminos">Acepto terminos y Condiciones</label>
         </div>
     </form>
     </div>
 </main>
-        <footer>
+
+
+
+
+<footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
     <li>Mauro Dagnino</li>
