termine el login js

--- a/login.html
+++ b/login.html
@@ -31,11 +31,11 @@
     <form class="register" action="index.html" method="get">
         <div class="login3">
             <label for="email">Email:</label>
-            <input class="login4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+            <input class="login4" id="email" type="text" name="email" placeholder="ingrese su email" value="" >
         </div>
         <div class="login3">
             <label for="contraseña">Contraseña:</label>
-            <input class="login4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+            <input class="login4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" >
         </div>
         <div class="login3">
             <button type="submit">Ingresar</button>
