--- a/category.html
+++ b/category.html
@@ -139,5 +139,6 @@
 </ul>
     </footer>
     <script src="./js/category.js"></script>
+    <script src="./js/saludo.js"></script>
 </body>
 </html>
