--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     <form class="register" action="index.html" method="get">
         <div class="login3">
             <label for="email">Email:</label>
-            <input class="login4" id="email" type="text" name="email" placeholder="ingrese su email" value="" >
+            <input class="login4" id="email" type="email" name="email" placeholder="ingrese su email" value="" >
         </div>
         <div class="login3">
             <label for="contraseña">Contraseña:</label>
