--- a/productos.html
+++ b/productos.html
@@ -86,6 +86,7 @@
         </ul>
     </footer>
     <script src="./js/productos.js"></script>
+    <script src="./js/saludo.js"></script>
 </body>
 
 </html>
