--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
         <div  class="register3">
             <label for="email">Email:</label>
             <br>
-            <input class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="">
+            <input class="register4" id="email" type="email" name="email" placeholder="ingrese su email" value="">
         </div>
         <div class="register3">
             <label for="contraseña">Contraseña:</label>
