--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         </ul>
     </footer>
      <script src="./js/index.js"></script>
+     <script src="./js/saludo.js"></script>
 </body>
 
 </html>
