--- a/category.html
+++ b/category.html
@@ -37,7 +37,7 @@
         </aside>
         <div>
        <div class="pAleatorios">
-        <h1>CHOCOLATES</h1>
+        <h1>VARIEDAD DE PRODUCTOS</h1>
           </div>
          <section class="productostop">
               <article class="productostop1">
