--- a/productos.html
+++ b/productos.html
@@ -35,46 +35,24 @@
             </nav>
         </aside>
         <div class="huevo1">
-            <div class="huevo6">
-                <h1 class="huevo2">HUEVO DE PASCUA</h1>
-                <h2 class="huevo3">Goloriolo</h2>
+            <section class="huevo6 descripcion_producto">       
+                <h1 class="huevo2">HUEVO DE PASCUA</h1>       
+                <h2 class="huevo3">Goloriolo</h2>       
                 <img class="fotohuevo" src="./img/imagen.jpg" alt="">
-                <h3 class="huevo4">
-                    ¡Llegaron nuestros huevos de Pascua edición especial Goloriolo!
-                    Hechos con amor, chocolate de primera y ese toque único que solo vas a encontrar en Goloriolo
-                    Tenemos diferentes tamaños para que nadie se quede sin su huevo:
-                    Mini huevos perfectos para sorprender
-                    Huevos medianos y grandes rellenos de magia
-                    Vienen en cajas diseñadas especialmente por nosotros,
-                    ¡ideales para regalar!
-                </h3>
-                <h3 class="huevo5">$10.000</h3>
-                <div class="huevo7">
-                <h3 class="huevo8">Categoria: Chocolates</h3>
-                <h3 class="huevo8">Stock: 04</h3>             
-                <h3 class="huevo8">#023</h3>
-                </div>
-            </div>
-            <div class="reviews">
-            <div class="review">
-                <p>⭐⭐⭐⭐⭐</p>
-                <p>¡Excelente producto! Me encantó la calidad.</p>
-                <p>Fecha: 23/9/2025</p>
-                <p class="usuario"> Usuario: Hugo Sanchez</p>
-            </div>
-            <div class="review">
-                <p>⭐⭐⭐⭐</p>
-                <p>Muy buen producto, pero me gusta mas el chocolate amargo.</p>
-                <p>Fecha: 24/9/2025</p>
-                <p class="usuario"> Usuario: Javier Pastore</p>
-            </div>
-            <div class="review">
-                <p>⭐⭐⭐⭐⭐</p>
-                <p>Me encanto el chocolate, lo recomiendo muchisimo!.</p>
-                <p>Fecha: 25/9/2025</p>
-                <p class="usuario"> Usuario: Martin Palermo</p>
-            </div>
-            </div>
+                <h3 class="huevo4">       
+                    Texto de ejemplo…       
+                </h3>       
+                <h3 class="huevo5">$10.000</h3>       
+                <div class="huevo7">       
+                    <h3 class="huevo8 categoria">Categoria: Chocolates</h3>       
+                    <h3 class="huevo8 stock">Stock: 04</h3>       
+                    <h3 class="huevo8 codigo">#023</h3>       
+                </div>       
+                <ul class="tags"></ul>
+            </section>
+            
+            <section class="reviews seccion_comentarios">
+            </section>
         </div>
     </main>
 
