--- a/search.html
+++ b/search.html
@@ -13,8 +13,8 @@
         </a>
          <article class="buscador">
         
-            <form class=buscador2 action="./search.html">
-            <input id="barra" type="text" placeholder="Buscar...">
+            <form class=buscador2 action="./search.html" method="GET">
+            <input id="barra" name="search" type="text" placeholder="Buscar...">
             <button>Buscar 🔍</button>
         </form>  
       
