--- a/category.html
+++ b/category.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-        <header>
+        <header class="barra">
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt=""class="logo">
         </a>
@@ -19,6 +19,8 @@
         </form>  
       
         </article>
+        <p class="mensaje"></p>
+        <h2 class="saludo"></h2>
         <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
@@ -138,7 +140,8 @@
     <li>Lucas Daud</li>
 </ul>
     </footer>
-    <script src="./js/category.js"></script>
+    <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
+    <script src="./js/category.js"></script>
 </body>
 </html>
