--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
    
-    <header>
+    <header class="barra">
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
@@ -23,6 +23,8 @@
             </form>
 
         </div>
+        <p class="mensaje"></p>
+        <h2 class="saludo"></h2>
         <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
@@ -152,8 +154,9 @@
             <li>Lucas Daud</li>
         </ul>
     </footer>
-     <script src="./js/index.js"></script>
-     <script src="./js/saludo.js"></script>
+     <script src="./js/logout.js"></script>
+    <script src="./js/saludo.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
