--- a/productos.html
+++ b/productos.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="barra">
         <a href="./index.html">
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
@@ -18,6 +18,8 @@
                 <input id="barra" type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
         </article>
+        <p class="mensaje"></p>
+        <h2 class="saludo"></h2>
         <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
@@ -63,8 +65,9 @@
             <li>Lucas Daud</li>
         </ul>
     </footer>
-    <script src="./js/productos.js"></script>
+    <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
+    <script src="./js/productos.js"></script>
 </body>
 
 </html>
