--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <a href="./register.html">Registrarse</a>
         </div>
 
+        <div>
+            <p class="logout1">hola nombreusuario</p>
+            <p class="logout2">logout</p>
+        </div>
     </header>
 
     <main>
