--- a/productos.html
+++ b/productos.html
@@ -25,6 +25,10 @@
             <a href="./register.html">Registrarse</a>
         </div>
 
+         <div>
+            <p class="logout1">hola nombreusuario</p>
+            <p class="logout2">logout</p>
+        </div>
     </header>
     <main class="mainProduct">
         <aside class="menu">
