--- a/search.html
+++ b/search.html
@@ -25,6 +25,11 @@
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
         </div>
+
+         <div>
+            <p class="logout1">hola nombreusuario</p>
+            <p class="logout2">logout</p>
+        </div>
     </header>
     <main>
    <aside class="menu">
