--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="buscador">
 
             <form class=buscador2 action="./search.html">
-                <input id="barra" type="text" placeholder="Buscar...">
+                <input id="barra" name="search" type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
             </form>
 
