--- a/category.html
+++ b/category.html
@@ -21,10 +21,10 @@
         </article>
         <p class="mensaje"></p>
         <h2 class="saludo"></h2>
-        <div class="login">
+        <nav class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
-        </div>
+        </nav>
 
          <div>
             <p class="logout1">hola nombreusuario</p>
