--- a/login.html
+++ b/login.html
@@ -19,10 +19,10 @@
         </form>
 
         </article>
-        <div class="login">
+        <nav class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
-        </div>
+        </nav>
 
     </header>
 <main>
