--- a/search.html
+++ b/search.html
@@ -19,16 +19,15 @@
         </form>  
       
         </article>
-        <p class="mensaje"></p>
-        <h2 class="saludo"></h2>
-        <nav class="login">
+        
+        <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
-        </nav>
+        </div>
 
-         <div>
-            <p class="logout1">hola nombreusuario</p>
-            <p class="logout2">logout</p>
+         <div class="saludo">
+            <p class="username">hola nombreusuario</p>
+            <p class="logout1">logout</p>
         </div>
     </header>
     <main>
