--- a/productos.html
+++ b/productos.html
@@ -18,16 +18,15 @@
                 <input id="barra" type="text" placeholder="Buscar...">
                 <button>Buscar 🔍</button>
         </article>
-        <p class="mensaje"></p>
-        <h2 class="saludo"></h2>
+        
         <nav class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
         </nav>
 
-         <div>
-            <p class="logout1">hola nombreusuario</p>
-            <p class="logout2">logout</p>
+        <div class="saludo">
+            <p class="username">hola nombreusuario</p>
+            <p class="logout1">logout</p>
         </div>
     </header>
     <main class="mainProduct">
