--- a/productos.html
+++ b/productos.html
@@ -40,7 +40,7 @@
             </nav>
         </aside>
         <div class="huevo1">
-            <section class="huevo6 descripcion_producto">       
+            <section class="huevo6">       
                 <h1 class="huevo2">HUEVO DE PASCUA</h1>       
                 <h2 class="huevo3">Goloriolo</h2>       
                 <img class="fotohuevo" src="./img/imagen.jpg" alt="">
@@ -49,14 +49,31 @@
                 </h3>       
                 <h3 class="huevo5">$10.000</h3>       
                 <div class="huevo7">       
-                    <h3 class="huevo8 categoria">Categoria: Chocolates</h3>       
-                    <h3 class="huevo8 stock">Stock: 04</h3>       
-                    <h3 class="huevo8 codigo">#023</h3>       
+                    <h3 class="huevo8">Categoria: Chocolates</h3>       
+                    <h3 class="huevo9">Stock: 04</h3>       
+                    <h3 class="huevo10">#023</h3>       
                 </div>       
-                <ul class="tags"></ul>
             </section>
             
-            <section class="reviews seccion_comentarios">
+            <section class="reviews">
+                <div class="review">
+                <p class="rating">⭐⭐⭐⭐⭐</p>
+                <p class="comentario">¡Excelente producto! Me encantó la calidad.</p>
+                <p class="fecha1">Fecha: 23/9/2025</p>
+                <p class="usuario"> Usuario: Hugo Sanchez</p>
+            </div>
+            <div class="review">
+                <p class="rating">⭐⭐⭐⭐</p>
+                <p class="comentario">Muy buen producto, pero me gusta mas el chocolate amargo.</p>
+                <p class="fecha1">Fecha: 24/9/2025</p>
+                <p class="usuario"> Usuario: Javier Pastore</p>
+            </div>
+            <div class="review">
+                <p class="rating">⭐⭐⭐⭐⭐</p>
+                <p class="comentario">Me encanto el chocolate, lo recomiendo muchisimo!.</p>
+                <p class="fecha1">Fecha: 25/9/2025</p>
+                <p class="usuario"> Usuario: Martin Palermo</p>
+            </div>
             </section>
         </div>
     </main>
