--- a/productos.html
+++ b/productos.html
@@ -56,23 +56,12 @@
             </section>
             
             <section class="reviews">
-                <div class="review">
+            <div class="review">
                 <p class="rating">⭐⭐⭐⭐⭐</p>
                 <p class="comentario">¡Excelente producto! Me encantó la calidad.</p>
                 <p class="fecha1">Fecha: 23/9/2025</p>
                 <p class="usuario"> Usuario: Hugo Sanchez</p>
-            </div>
-            <div class="review">
-                <p class="rating">⭐⭐⭐⭐</p>
-                <p class="comentario">Muy buen producto, pero me gusta mas el chocolate amargo.</p>
-                <p class="fecha1">Fecha: 24/9/2025</p>
-                <p class="usuario"> Usuario: Javier Pastore</p>
-            </div>
-            <div class="review">
-                <p class="rating">⭐⭐⭐⭐⭐</p>
-                <p class="comentario">Me encanto el chocolate, lo recomiendo muchisimo!.</p>
-                <p class="fecha1">Fecha: 25/9/2025</p>
-                <p class="usuario"> Usuario: Martin Palermo</p>
+                <p class="email"> Usuario: Hugo Sanchez</p>
             </div>
             </section>
         </div>
